[AF] Force MD2 colors on labels

This fixes a low contrast issue that happens when a dark native
theme is enabled. The solution consists of disabling auto-color
readability for the labels, which forces minimum contrast when
background colors for labels are not explicitely set. That
protection is not needed for the Autofill/Password generation
dropdowns, because contrast is already taken into account in MD2.

The same idea has been applied elsewhere in the code base (see
https://bugs.chromium.org/p/chromium/issues/detail?id=814121
for an example).

Bug: 881514
Change-Id: If455e053499fb23add58197f11a14fa7493cecc8
Reviewed-on: https://chromium-review.googlesource.com/1219991
Commit-Queue: Fabio Tirelo <ftirelo@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590686}
Former-commit-id: 0c498633e31133e276cd3e38e2362ffdbfb3925c